ERA-7: Unit and IT tests based on JUnit 5 impl.