@@ -1,31 +1,27 @@
 package ua.edu.ratos.service.domain;
 
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
-import org.mockito.junit.MockitoJUnitRunner;
+import org.mockito.junit.jupiter.MockitoExtension;
 import ua.edu.ratos.service.domain.response.ResponseMCQ;
 
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 
 import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.empty;
-import static org.hamcrest.Matchers.equalTo;
-import static org.hamcrest.Matchers.is;
+import static org.hamcrest.Matchers.*;
 import static org.mockito.Mockito.when;
 
-@RunWith(MockitoJUnitRunner.class)
+@ExtendWith(MockitoExtension.class)
 public class BatchEvaluatedTest {
 
     @Mock
     private BatchEvaluated batchEvaluated;
 
-    @Test(timeout = 1000L)
+    @Test
     public void getIncorrectResponsesIdsZeroTest() {
-
-        List<ResponseEvaluated> responsesEvaluated = Arrays.asList(
+        List<ResponseEvaluated> responsesEvaluated = List.of(
                 createResponseEvaluated(1L, 100),
                 createResponseEvaluated(2L, 100),
                 createResponseEvaluated(3L, 100),
@@ -41,10 +37,9 @@ public class BatchEvaluatedTest {
     }
 
 
-    @Test(timeout = 1000L)
+    @Test
     public void getIncorrectResponsesIdsOneTest() {
-
-        List<ResponseEvaluated> responsesEvaluated = Arrays.asList(
+        List<ResponseEvaluated> responsesEvaluated = List.of(
                 createResponseEvaluated(1L, 100),
                 createResponseEvaluated(2L, 100),
                 createResponseEvaluated(3L, 0),
@@ -56,14 +51,13 @@ public class BatchEvaluatedTest {
         // Actual test begins
         List<Long> actual = batchEvaluated.getIncorrectResponseIds();
 
-        assertThat("Wrong array of incorrect responses", Arrays.asList(3L), is(equalTo(actual)));
+        assertThat("Wrong array of incorrect responses", List.of(3L), is(equalTo(actual)));
     }
 
 
-    @Test(timeout = 1000L)
+    @Test
     public void getIncorrectResponsesIdsTwoTest() {
-
-        List<ResponseEvaluated> responsesEvaluated = Arrays.asList(
+        List<ResponseEvaluated> responsesEvaluated = List.of(
                 createResponseEvaluated(1L, 0),
                 createResponseEvaluated(2L, 100),
                 createResponseEvaluated(3L, 0),
@@ -75,13 +69,12 @@ public class BatchEvaluatedTest {
         // Actual test begins
         List<Long> actual = batchEvaluated.getIncorrectResponseIds();
 
-        assertThat("Wrong array of incorrect responses", Arrays.asList(1L, 3L), is(equalTo(actual)));
+        assertThat("Wrong array of incorrect responses", List.of(1L, 3L), is(equalTo(actual)));
     }
 
-    @Test(timeout = 1000L)
+    @Test
     public void getIncorrectResponsesIdsAllTest() {
-
-        List<ResponseEvaluated> responsesEvaluated = Arrays.asList(
+        List<ResponseEvaluated> responsesEvaluated = List.of(
                 createResponseEvaluated(1L, 0),
                 createResponseEvaluated(2L, 0),
                 createResponseEvaluated(3L, 0),
@@ -93,11 +86,11 @@ public class BatchEvaluatedTest {
         // Actual test begins
         List<Long> actual = batchEvaluated.getIncorrectResponseIds();
 
-        assertThat("Wrong array of incorrect responses", Arrays.asList(1L, 2L, 3L, 4L), is(equalTo(actual)));
+        assertThat("Wrong array of incorrect responses", List.of(1L, 2L, 3L, 4L), is(equalTo(actual)));
     }
 
     private ResponseEvaluated createResponseEvaluated(long qId, double score) {
-        return new ResponseEvaluated(qId, new ResponseMCQ(qId, new HashSet()), score, false);
+        return new ResponseEvaluated(qId, new ResponseMCQ(qId, new HashSet<>()), score, false);
     }
 
 }
