@@ -1,40 +1,32 @@
 package ua.edu.ratos.service.domain.question;
 
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.experimental.runners.Enclosed;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
+import org.junit.jupiter.api.Nested;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import ua.edu.ratos.service.domain.PhraseDomain;
 import ua.edu.ratos.service.domain.SettingsFBDomain;
 import ua.edu.ratos.service.domain.answer.AnswerFBSQDomain;
 import ua.edu.ratos.service.domain.response.ResponseFBSQ;
 
 import java.util.Arrays;
-import java.util.Collection;
 import java.util.HashSet;
+import java.util.Set;
+import java.util.stream.Stream;
 
-@RunWith(Enclosed.class)
+import static org.junit.jupiter.api.Assertions.assertEquals;
+
 public class QuestionFBSQDomainParameterizedTest {
 
-    private static final String[] ACCEPTED_PHRASES = new String[] {"phrase1", "phrase#1", "phrase one"};
+    private static final String[] ACCEPTED_PHRASES = new String[]{"phrase1", "phrase#1", "phrase one"};
 
+    @Nested
+    public class CaseSensitiveNoTyposAllowedTest {
 
-    @RunWith(Parameterized.class)
-    public static class CaseSensitiveNoTyposAllowed {
-
-        private QuestionFBSQDomain question;
-
-        @Parameterized.Parameter(0)
-        public ResponseFBSQ response;
-
-        @Parameterized.Parameter(1)
-        public int expected;
-
-        @Before
-        public void setUp() {
-            question = new QuestionFBSQDomain();
+        @ParameterizedTest
+        @MethodSource("data")
+        public void evaluateTest(ResponseFBSQ response, int expected) {
+            QuestionFBSQDomain question = new QuestionFBSQDomain();
             question.setQuestionId(1L);
             AnswerFBSQDomain answer = new AnswerFBSQDomain();
             PhraseDomain phraseDomain0 = new PhraseDomain();
@@ -43,51 +35,39 @@ public class QuestionFBSQDomainParameterizedTest {
             phraseDomain1.setPhrase(ACCEPTED_PHRASES[1]);
             PhraseDomain phraseDomain2 = new PhraseDomain();
             phraseDomain2.setPhrase(ACCEPTED_PHRASES[2]);
-            PhraseDomain[] phraseDomains = new PhraseDomain[] {phraseDomain0, phraseDomain1, phraseDomain2};
+            PhraseDomain[] phraseDomains = {phraseDomain0, phraseDomain1, phraseDomain2};
             answer.setAcceptedPhraseDomains(new HashSet<>(Arrays.asList(phraseDomains)));
             question.setAnswer(answer);
             SettingsFBDomain settings = new SettingsFBDomain();
             settings.setCaseSensitive(true);
             settings.setTypoAllowed(false);
             answer.setSettings(settings);
+            assertEquals(expected, question.evaluate(response), 0.01, "Calculated score is not equal to the expected");
         }
 
-        @Parameterized.Parameters(name = "{index}: evaluateTest({0}) = {1}")
-        public static Collection<Object[]> data() {
-            return Arrays.asList(new Object[][]{
-                    {new ResponseFBSQ(1L, null), 0},
-                    {new ResponseFBSQ(1L, ""), 0},
-                    {new ResponseFBSQ(1L, "000"), 0},
-                    {new ResponseFBSQ(1L, "string1"), 0},
-                    {new ResponseFBSQ(1L, "phrase 1"), 0},
-                    {new ResponseFBSQ(1L, "phrase1 "), 100},
-                    {new ResponseFBSQ(1L, " phrase1 "), 100},
-                    {new ResponseFBSQ(1L, "phrase1"), 100},
-                    {new ResponseFBSQ(1L, "phrase#1"), 100},
-                    {new ResponseFBSQ(1L, "phrase one"), 100},
-            });
-        }
-
-        @Test(timeout = 1000L)
-        public void evaluateTest() throws Exception {
-            Assert.assertEquals("Calculated score is not equal to the expected", expected, question.evaluate(response), 0.01);
+        public static Stream<Arguments> data() {
+            return Stream.of(
+                    Arguments.of(new ResponseFBSQ(1L, null), 0),
+                    Arguments.of(new ResponseFBSQ(1L, ""), 0),
+                    Arguments.of(new ResponseFBSQ(1L, "000"), 0),
+                    Arguments.of(new ResponseFBSQ(1L, "string1"), 0),
+                    Arguments.of(new ResponseFBSQ(1L, "phrase 1"), 0),
+                    Arguments.of(new ResponseFBSQ(1L, "phrase1 "), 100),
+                    Arguments.of(new ResponseFBSQ(1L, " phrase1 "), 100),
+                    Arguments.of(new ResponseFBSQ(1L, "phrase1"), 100),
+                    Arguments.of(new ResponseFBSQ(1L, "phrase#1"), 100),
+                    Arguments.of(new ResponseFBSQ(1L, "phrase one"), 100)
+            );
         }
     }
 
-    @RunWith(Parameterized.class)
-    public static class NonCaseSensitiveNoTyposAllowed {
+    @Nested
+    public class NonCaseSensitiveNoTyposAllowedTest {
 
-        private QuestionFBSQDomain question;
-
-        @Parameterized.Parameter(0)
-        public ResponseFBSQ response;
-
-        @Parameterized.Parameter(1)
-        public int expected;
-
-        @Before
-        public void setUp() {
-            question = new QuestionFBSQDomain();
+        @ParameterizedTest
+        @MethodSource("data")
+        public void evaluateTest(ResponseFBSQ response, int expected) {
+            QuestionFBSQDomain question = new QuestionFBSQDomain();
             question.setQuestionId(1L);
             AnswerFBSQDomain answer = new AnswerFBSQDomain();
             PhraseDomain phraseDomain0 = new PhraseDomain();
@@ -96,56 +76,44 @@ public class QuestionFBSQDomainParameterizedTest {
             phraseDomain1.setPhrase(ACCEPTED_PHRASES[1]);
             PhraseDomain phraseDomain2 = new PhraseDomain();
             phraseDomain2.setPhrase(ACCEPTED_PHRASES[2]);
-            PhraseDomain[] phraseDomains = new PhraseDomain[] {phraseDomain0, phraseDomain1, phraseDomain2};
-            answer.setAcceptedPhraseDomains(new HashSet<>(Arrays.asList(phraseDomains)));
+            PhraseDomain[] phraseDomains = {phraseDomain0, phraseDomain1, phraseDomain2};
+            answer.setAcceptedPhraseDomains(Set.of(phraseDomains));
             question.setAnswer(answer);
             SettingsFBDomain settings = new SettingsFBDomain();
             settings.setCaseSensitive(false);
             settings.setTypoAllowed(false);
             answer.setSettings(settings);
+            assertEquals(expected, question.evaluate(response), 0.01, "Calculated score is not equal to the expected");
         }
 
-        @Parameterized.Parameters(name = "{index}: evaluateTest({0}) = {1}")
-        public static Collection<Object[]> data() {
-            return Arrays.asList(new Object[][]{
-                    {new ResponseFBSQ(1L, null), 0},
-                    {new ResponseFBSQ(1L, ""), 0},
-                    {new ResponseFBSQ(1L, "000"), 0},
-                    {new ResponseFBSQ(1L, "string1"), 0},
-                    {new ResponseFBSQ(1L, "phrase 1"), 0},
-                    {new ResponseFBSQ(1L, "phrase1 "), 100},
-                    {new ResponseFBSQ(1L, " phrase1 "), 100},
-                    {new ResponseFBSQ(1L, "phrase1"), 100},
-                    {new ResponseFBSQ(1L, "phrase#1"), 100},
-                    {new ResponseFBSQ(1L, "phrase one"), 100},
-                    {new ResponseFBSQ(1L, "Phrase one"), 100},
-                    {new ResponseFBSQ(1L, "Phrase One"), 100},
-                    {new ResponseFBSQ(1L, "PHRASE one"), 100},
-                    {new ResponseFBSQ(1L, "Phrase ONE"), 100},
-                    {new ResponseFBSQ(1L, "PHRASE ONE"), 100},
-            });
-        }
-
-        @Test(timeout = 1000L)
-        public void evaluateTest() throws Exception {
-            Assert.assertEquals("Calculated score is not equal to the expected", expected, question.evaluate(response), 0.01);
+        public static Stream<Arguments> data() {
+            return Stream.of(
+                    Arguments.of(new ResponseFBSQ(1L, null), 0),
+                    Arguments.of((new ResponseFBSQ(1L, "")), 0),
+                    Arguments.of((new ResponseFBSQ(1L, "000")), 0),
+                    Arguments.of((new ResponseFBSQ(1L, "string1")), 0),
+                    Arguments.of((new ResponseFBSQ(1L, "phrase 1")), 0),
+                    Arguments.of((new ResponseFBSQ(1L, "phrase1 ")), 100),
+                    Arguments.of((new ResponseFBSQ(1L, " phrase1 ")), 100),
+                    Arguments.of((new ResponseFBSQ(1L, "phrase1")), 100),
+                    Arguments.of((new ResponseFBSQ(1L, "phrase#1")), 100),
+                    Arguments.of((new ResponseFBSQ(1L, "phrase one")), 100),
+                    Arguments.of((new ResponseFBSQ(1L, "Phrase one")), 100),
+                    Arguments.of((new ResponseFBSQ(1L, "Phrase One")), 100),
+                    Arguments.of((new ResponseFBSQ(1L, "PHRASE one")), 100),
+                    Arguments.of((new ResponseFBSQ(1L, "Phrase ONE")), 100),
+                    Arguments.of((new ResponseFBSQ(1L, "PHRASE ONE")), 100)
+            );
         }
     }
 
-    @RunWith(Parameterized.class)
-    public static class CaseSensitiveTyposAllowed {
+    @Nested
+    public class CaseSensitiveTyposAllowedTest {
 
-        private QuestionFBSQDomain question;
-
-        @Parameterized.Parameter(0)
-        public ResponseFBSQ response;
-
-        @Parameterized.Parameter(1)
-        public int expected;
-
-        @Before
-        public void setUp() {
-            question = new QuestionFBSQDomain();
+        @ParameterizedTest
+        @MethodSource("data")
+        public void evaluateTest(ResponseFBSQ response, int expected) {
+            QuestionFBSQDomain question = new QuestionFBSQDomain();
             question.setQuestionId(1L);
             AnswerFBSQDomain answer = new AnswerFBSQDomain();
             PhraseDomain phraseDomain0 = new PhraseDomain();
@@ -154,53 +122,40 @@ public class QuestionFBSQDomainParameterizedTest {
             phraseDomain1.setPhrase(ACCEPTED_PHRASES[1]);
             PhraseDomain phraseDomain2 = new PhraseDomain();
             phraseDomain2.setPhrase(ACCEPTED_PHRASES[2]);
-            PhraseDomain[] phraseDomains = new PhraseDomain[] {phraseDomain0, phraseDomain1, phraseDomain2};
-            answer.setAcceptedPhraseDomains(new HashSet<>(Arrays.asList(phraseDomains)));
+            answer.setAcceptedPhraseDomains(new HashSet<>(Arrays.asList(phraseDomain0, phraseDomain1, phraseDomain2)));
             question.setAnswer(answer);
             SettingsFBDomain settings = new SettingsFBDomain();
             settings.setCaseSensitive(true);
             settings.setTypoAllowed(true);
             answer.setSettings(settings);
+            assertEquals(expected, question.evaluate(response), 0.01, "Calculated score is not equal to the expected");
         }
 
-        @Parameterized.Parameters(name = "{index}: evaluateTest({0}) = {1}")
-        public static Collection<Object[]> data() {
-            return Arrays.asList(new Object[][]{
-                    {new ResponseFBSQ(1L, null), 0},
-                    {new ResponseFBSQ(1L, ""), 0},
-                    {new ResponseFBSQ(1L, "000"), 0},
-                    {new ResponseFBSQ(1L, "string1"), 0},
-                    {new ResponseFBSQ(1L, "phrase1 "), 100},
-                    {new ResponseFBSQ(1L, " phrase1 "), 100},
-                    {new ResponseFBSQ(1L, "phrase1"), 100},
-                    {new ResponseFBSQ(1L, "phrase#1"), 100},
-                    {new ResponseFBSQ(1L, "phrase one"), 100},
-                    {new ResponseFBSQ(1L, "phraseone"), 100},
-                    {new ResponseFBSQ(1L, "phrase on1"), 100},
-                    {new ResponseFBSQ(1L, "prase one"), 100},
-            });
-        }
-
-        @Test(timeout = 1000L)
-        public void evaluateTest() throws Exception {
-            Assert.assertEquals("Calculated score is not equal to the expected", expected, question.evaluate(response), 0.01);
+        public static Stream<Arguments> data() {
+            return Stream.of(
+                    Arguments.of(new ResponseFBSQ(1L, null), 0),
+                    Arguments.of(new ResponseFBSQ(1L, ""), 0),
+                    Arguments.of(new ResponseFBSQ(1L, "000"), 0),
+                    Arguments.of(new ResponseFBSQ(1L, "string1"), 0),
+                    Arguments.of(new ResponseFBSQ(1L, "phrase1 "), 100),
+                    Arguments.of(new ResponseFBSQ(1L, " phrase1 "), 100),
+                    Arguments.of(new ResponseFBSQ(1L, "phrase1"), 100),
+                    Arguments.of(new ResponseFBSQ(1L, "phrase#1"), 100),
+                    Arguments.of(new ResponseFBSQ(1L, "phrase one"), 100),
+                    Arguments.of(new ResponseFBSQ(1L, "phraseone"), 100),
+                    Arguments.of(new ResponseFBSQ(1L, "phrase on1"), 100),
+                    Arguments.of(new ResponseFBSQ(1L, "prase one"), 100)
+            );
         }
     }
 
-    @RunWith(Parameterized.class)
-    public static class NonCaseSensitiveTyposAllowed {
+    @Nested
+    public class NonCaseSensitiveTyposAllowedTest {
 
-        private QuestionFBSQDomain question;
-
-        @Parameterized.Parameter(0)
-        public ResponseFBSQ response;
-
-        @Parameterized.Parameter(1)
-        public int expected;
-
-        @Before
-        public void setUp() {
-            question = new QuestionFBSQDomain();
+        @ParameterizedTest
+        @MethodSource("data")
+        public void evaluateTest(ResponseFBSQ response, int expected) {
+            QuestionFBSQDomain question = new QuestionFBSQDomain();
             question.setQuestionId(1L);
             AnswerFBSQDomain answer = new AnswerFBSQDomain();
             PhraseDomain phraseDomain0 = new PhraseDomain();
@@ -209,40 +164,33 @@ public class QuestionFBSQDomainParameterizedTest {
             phraseDomain1.setPhrase(ACCEPTED_PHRASES[1]);
             PhraseDomain phraseDomain2 = new PhraseDomain();
             phraseDomain2.setPhrase(ACCEPTED_PHRASES[2]);
-            PhraseDomain[] phraseDomains = new PhraseDomain[] {phraseDomain0, phraseDomain1, phraseDomain2};
-            answer.setAcceptedPhraseDomains(new HashSet<>(Arrays.asList(phraseDomains)));
+            answer.setAcceptedPhraseDomains(new HashSet<>(Arrays.asList(phraseDomain0, phraseDomain1, phraseDomain2)));
             question.setAnswer(answer);
             SettingsFBDomain settings = new SettingsFBDomain();
             settings.setCaseSensitive(false);
             settings.setTypoAllowed(true);
             answer.setSettings(settings);
+            assertEquals(expected, question.evaluate(response), 0.01, "Calculated score is not equal to the expected");
         }
 
-        @Parameterized.Parameters(name = "{index}: evaluateTest({0}) = {1}")
-        public static Collection<Object[]> data() {
-            return Arrays.asList(new Object[][]{
-                    {new ResponseFBSQ(1L, null), 0},
-                    {new ResponseFBSQ(1L, ""), 0},
-                    {new ResponseFBSQ(1L, "000"), 0},
-                    {new ResponseFBSQ(1L, "string1"), 0},
-                    {new ResponseFBSQ(1L, "phrase1 "), 100},
-                    {new ResponseFBSQ(1L, " phrase1 "), 100},
-                    {new ResponseFBSQ(1L, "phrase1"), 100},
-                    {new ResponseFBSQ(1L, "phrase#1"), 100},
-                    {new ResponseFBSQ(1L, "phrase one"), 100},
-                    {new ResponseFBSQ(1L, "phraseone"), 100},
-                    {new ResponseFBSQ(1L, "phrase on1"), 100},
-                    {new ResponseFBSQ(1L, "prase one"), 100},
-                    {new ResponseFBSQ(1L, "Phraseone"), 100},
-                    {new ResponseFBSQ(1L, "phrase ON1"), 100},
-                    {new ResponseFBSQ(1L, "PRASE ONE"), 100},
-            });
-        }
-
-        @Test(timeout = 1000L)
-        public void evaluateTest() throws Exception {
-            Assert.assertEquals("Calculated score is not equal to the expected", expected, question.evaluate(response), 0.01);
+        public static Stream<Arguments> data() {
+            return Stream.of(
+                    Arguments.of(new ResponseFBSQ(1L, null), 0),
+                    Arguments.of(new ResponseFBSQ(1L, ""), 0),
+                    Arguments.of(new ResponseFBSQ(1L, "000"), 0),
+                    Arguments.of(new ResponseFBSQ(1L, "string1"), 0),
+                    Arguments.of(new ResponseFBSQ(1L, "phrase1 "), 100),
+                    Arguments.of(new ResponseFBSQ(1L, " phrase1 "), 100),
+                    Arguments.of(new ResponseFBSQ(1L, "phrase1"), 100),
+                    Arguments.of(new ResponseFBSQ(1L, "phrase#1"), 100),
+                    Arguments.of(new ResponseFBSQ(1L, "phrase one"), 100),
+                    Arguments.of(new ResponseFBSQ(1L, "phraseone"), 100),
+                    Arguments.of(new ResponseFBSQ(1L, "phrase on1"), 100),
+                    Arguments.of(new ResponseFBSQ(1L, "prase one"), 100),
+                    Arguments.of(new ResponseFBSQ(1L, "Phraseone"), 100),
+                    Arguments.of(new ResponseFBSQ(1L, "phrase ON1"), 100),
+                    Arguments.of(new ResponseFBSQ(1L, "PRASE ONE"), 100)
+            );
         }
     }
-
 }
