@@ -1,11 +1,11 @@
 package ua.edu.ratos.service.session;
 
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.junit.MockitoJUnitRunner;
+import org.mockito.junit.jupiter.MockitoExtension;
 import ua.edu.ratos._helper.QuestionGeneratorHelper;
 import ua.edu.ratos.service.domain.ResponseEvaluated;
 import ua.edu.ratos.service.domain.SessionData;
@@ -17,10 +17,11 @@ import ua.edu.ratos.service.dto.session.batch.BatchOutDto;
 import java.util.*;
 import java.util.stream.Collectors;
 
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.when;
 
-@RunWith(MockitoJUnitRunner.class)
+@ExtendWith(MockitoExtension.class)
 public class BatchEvaluatorServiceTest {
 
     @InjectMocks
@@ -36,7 +37,7 @@ public class BatchEvaluatorServiceTest {
 
     private Map<Long, QuestionDomain> questionsMap;
 
-    @Before
+    @BeforeEach
     public void init() {
         QuestionGeneratorHelper qGH = new QuestionGeneratorHelper();
 
@@ -55,10 +56,10 @@ public class BatchEvaluatorServiceTest {
         questionsMap.put(4L, mq);
         questionsMap.put(5L, sq);
 
-        this.batchOutDto = BatchOutDto.createRegular(sequence.stream().map(q -> q.toDto()).collect(Collectors.toList()), true);
+        this.batchOutDto = BatchOutDto.createRegular(sequence.stream().map(QuestionDomain::toDto).collect(Collectors.toList()), true);
     }
 
-    @Test(timeout = 1000L)
+    @Test
     public void doEvaluateAll5CorrectTest() {
         when(timeout.isTimeouted()).thenReturn(false);
         when(sessionData.getCurrentBatch()).thenReturn(Optional.ofNullable(this.batchOutDto));
@@ -67,7 +68,7 @@ public class BatchEvaluatorServiceTest {
         // Prepare all correct responses for each question of different type
         Map<Long, Response> responses = new HashMap<>();
 
-        Response responseMCQ = new ResponseMCQ(1L, new HashSet<>(Arrays.asList(1L)));
+        Response responseMCQ = new ResponseMCQ(1L, Set.of(1L));
         responses.put(1L, responseMCQ);
 
         Response responseFBSQ = new ResponseFBSQ(2L, "PhraseDomain #4");
@@ -78,17 +79,17 @@ public class BatchEvaluatorServiceTest {
         ResponseFBMQ.Pair p3 = new ResponseFBMQ.Pair(3L, "PhraseDomain #4 for FBMQ answer #3");
         ResponseFBMQ.Pair p4 = new ResponseFBMQ.Pair(4L, "PhraseDomain #4 for FBMQ answer #4");
 
-        Response responseFBMQ = new ResponseFBMQ(3L, new HashSet(Arrays.asList(p1, p2, p3, p4)));
+        Response responseFBMQ = new ResponseFBMQ(3L, Set.of(p1, p2, p3, p4));
         responses.put(3L, responseFBMQ);
 
         ResponseMQ.Triple t1 = new ResponseMQ.Triple(1L, 21L, 22L);
         ResponseMQ.Triple t2 = new ResponseMQ.Triple(2L, 23L, 24L);
         ResponseMQ.Triple t3 = new ResponseMQ.Triple(3L, 25L, 26L);
         ResponseMQ.Triple t4 = new ResponseMQ.Triple(4L, 27L, 28L);
-        Response responseMQ = new ResponseMQ(4L, new HashSet<>(Arrays.asList(t1, t2, t3, t4)));
+        Response responseMQ = new ResponseMQ(4L, Set.of(t1, t2, t3, t4));
         responses.put(4L, responseMQ);
 
-        Response responseSQ = new ResponseSQ(5L, Arrays.asList(1L, 2L, 3L, 4L, 5L));
+        Response responseSQ = new ResponseSQ(5L, List.of(1L, 2L, 3L, 4L, 5L));
         responses.put(5L, responseSQ);
 
         BatchInDto batchInDto = new BatchInDto(responses);
@@ -96,17 +97,16 @@ public class BatchEvaluatorServiceTest {
         // Actual test begins
         List<ResponseEvaluated> list = batchEvaluatorService.doEvaluate(batchInDto, sessionData);
 
-        assertEquals("Array length is not equal to 5",5, list.size());
-
-        assertEquals("First score is not 100.0",100.0, list.get(0).getScore(), 0.1);
-        assertEquals("Second score is not 100.0", 100.0, list.get(1).getScore(), 0.1);
-        assertEquals("Third score is not 100.0",100.0, list.get(2).getScore(), 0.1);
-        assertEquals("Fourth score is not 100.0", 100.0, list.get(3).getScore(), 0.1);
-        assertEquals("Fifth score is not 100.0", 100.0, list.get(4).getScore(), 0.1);
+        assertEquals(5, list.size(), "Array length is not equal to 5");
+        assertEquals(100.0, list.get(0).getScore(), 0.1, "First score is not 100.0");
+        assertEquals(100.0, list.get(1).getScore(), 0.1, "Second score is not 100.0");
+        assertEquals(100.0, list.get(2).getScore(), 0.1, "Third score is not 100.0");
+        assertEquals(100.0, list.get(3).getScore(), 0.1, "Fourth score is not 100.0");
+        assertEquals(100.0, list.get(4).getScore(), 0.1, "Fifth score is not 100.0");
     }
 
 
-    @Test(timeout = 1000L)
+    @Test
     public void doEvaluateAll5InCorrectTest() {
         when(timeout.isTimeouted()).thenReturn(false);
         when(sessionData.getCurrentBatch()).thenReturn(Optional.ofNullable(this.batchOutDto));
@@ -115,7 +115,7 @@ public class BatchEvaluatorServiceTest {
         // Prepare all incorrect responses
         Map<Long, Response> responses = new HashMap<>();
 
-        Response responseMCQ = new ResponseMCQ(1L, new HashSet<>(Arrays.asList(4L)));
+        Response responseMCQ = new ResponseMCQ(1L, Set.of(4L));
         responses.put(1L, responseMCQ);
 
         Response responseFBSQ = new ResponseFBSQ(2L, "PhraseDomain #4 Incorrect");
@@ -126,34 +126,33 @@ public class BatchEvaluatorServiceTest {
         ResponseFBMQ.Pair p3 = new ResponseFBMQ.Pair(3L, "PhraseDomain #4 for FBMQ answer #3 Incorrect");
         ResponseFBMQ.Pair p4 = new ResponseFBMQ.Pair(4L, "PhraseDomain #4 for FBMQ answer #4 Incorrect");
 
-        Response responseFBMQ = new ResponseFBMQ(3L, new HashSet(Arrays.asList(p1, p2, p3, p4)));
+        Response responseFBMQ = new ResponseFBMQ(3L, Set.of(p1, p2, p3, p4));
         responses.put(3L, responseFBMQ);
 
         ResponseMQ.Triple t1 = new ResponseMQ.Triple(1L, 22L, 21L);
         ResponseMQ.Triple t2 = new ResponseMQ.Triple(2L, 24L, 23L);
         ResponseMQ.Triple t3 = new ResponseMQ.Triple(3L, 26L, 25L);
         ResponseMQ.Triple t4 = new ResponseMQ.Triple(4L, 28L, 27L);
-        Response responseMQ = new ResponseMQ(4L, new HashSet<>(Arrays.asList(t1, t2, t3, t4)));
+        Response responseMQ = new ResponseMQ(4L, Set.of(t1, t2, t3, t4));
         responses.put(4L, responseMQ);
 
-        Response responseSQ = new ResponseSQ(5L, Arrays.asList(5L, 4L, 3L, 2L, 1L));
+        Response responseSQ = new ResponseSQ(5L, List.of(5L, 4L, 3L, 2L, 1L));
         responses.put(5L, responseSQ);
 
         BatchInDto batchInDto = new BatchInDto(responses);
 
         // Actual test begin
         List<ResponseEvaluated> list = batchEvaluatorService.doEvaluate(batchInDto, sessionData);
-        assertEquals("Array length is not equal to 5",5, list.size());
-
-        assertEquals("First score is not 0.0", 0.0, list.get(0).getScore(), 0.1);
-        assertEquals("Second score is not 0.0",0.0, list.get(1).getScore(), 0.1);
-        assertEquals("Third score is not 0.0",0.0, list.get(2).getScore(), 0.1);
-        assertEquals("Fourth score is not 0.0",0.0, list.get(3).getScore(), 0.1);
-        assertEquals("Fifth score is not 0.0",0.0, list.get(4).getScore(), 0.1);
+        assertEquals(5, list.size(), "Array length is not equal to 5");
+        assertEquals(0.0, list.get(0).getScore(), 0.1, "First score is not 0.0");
+        assertEquals(0.0, list.get(1).getScore(), 0.1, "Second score is not 0.0");
+        assertEquals(0.0, list.get(2).getScore(), 0.1, "Third score is not 0.0");
+        assertEquals(0.0, list.get(3).getScore(), 0.1, "Fourth score is not 0.0");
+        assertEquals(0.0, list.get(4).getScore(), 0.1, "Fifth score is not 0.0");
 
     }
 
-    @Test(timeout = 1000L)
+    @Test
     public void doEvaluateAll3OutOf5CorrectTest() {
         when(timeout.isTimeouted()).thenReturn(false);
         when(sessionData.getCurrentBatch()).thenReturn(Optional.ofNullable(this.batchOutDto));
@@ -162,7 +161,7 @@ public class BatchEvaluatorServiceTest {
         // Prepare 3 out of 5 correct responses
         Map<Long, Response> responses = new HashMap<>();
 
-        Response responseMCQ = new ResponseMCQ(1L, new HashSet<>(Arrays.asList(1L)));
+        Response responseMCQ = new ResponseMCQ(1L, Set.of(1L));
         responses.put(1L, responseMCQ);
 
         // Incorrect
@@ -174,35 +173,34 @@ public class BatchEvaluatorServiceTest {
         ResponseFBMQ.Pair p3 = new ResponseFBMQ.Pair(3L, "PhraseDomain #4 for FBMQ answer #3");
         ResponseFBMQ.Pair p4 = new ResponseFBMQ.Pair(4L, "PhraseDomain #4 for FBMQ answer #4");
 
-        Response responseFBMQ = new ResponseFBMQ(3L, new HashSet(Arrays.asList(p1, p2, p3, p4)));
+        Response responseFBMQ = new ResponseFBMQ(3L, Set.of(p1, p2, p3, p4));
         responses.put(3L, responseFBMQ);
 
         ResponseMQ.Triple t1 = new ResponseMQ.Triple(1L, 21L, 22L);
         ResponseMQ.Triple t2 = new ResponseMQ.Triple(2L, 23L, 24L);
         ResponseMQ.Triple t3 = new ResponseMQ.Triple(3L, 25L, 26L);
         ResponseMQ.Triple t4 = new ResponseMQ.Triple(4L, 27L, 28L);
-        Response responseMQ = new ResponseMQ(4L, new HashSet<>(Arrays.asList(t1, t2, t3, t4)));
+        Response responseMQ = new ResponseMQ(4L, Set.of(t1, t2, t3, t4));
         responses.put(4L, responseMQ);
 
         // Incorrect
-        Response responseSQ = new ResponseSQ(5L, Arrays.asList(1L, 2L, 5L, 4L, 3L));
+        Response responseSQ = new ResponseSQ(5L, List.of(1L, 2L, 5L, 4L, 3L));
         responses.put(5L, responseSQ);
 
         BatchInDto batchInDto = new BatchInDto(responses);
 
         // Actual test begins
         List<ResponseEvaluated> list = batchEvaluatorService.doEvaluate(batchInDto, sessionData);
-        assertEquals("Array length is not equal to 5",5, list.size());
-
-        assertEquals("First score is not 100.0",100.0, list.get(0).getScore(), 0.1);
-        assertEquals("Second score is not 0.0",0.0, list.get(1).getScore(), 0.1);
-        assertEquals("Third score is not 100.0",100.0, list.get(2).getScore(), 0.1);
-        assertEquals("Fourth score is not 100.0",100.0, list.get(3).getScore(), 0.1);
-        assertEquals("Fifth score is not 0.0",0.0, list.get(4).getScore(), 0.1);
+        assertEquals(5, list.size(), "Array length is not equal to 5");
+        assertEquals(100.0, list.get(0).getScore(), 0.1, "First score is not 100.0");
+        assertEquals(0.0, list.get(1).getScore(), 0.1, "Second score is not 0.0");
+        assertEquals(100.0, list.get(2).getScore(), 0.1, "Third score is not 100.0");
+        assertEquals(100.0, list.get(3).getScore(), 0.1, "Fourth score is not 100.0");
+        assertEquals(0.0, list.get(4).getScore(), 0.1, "Fifth score is not 0.0");
     }
 
 
-    @Test(timeout = 1000L)
+    @Test
     public void doEvaluatePartlyWherePossibleCorrectTest() {
         when(timeout.isTimeouted()).thenReturn(false);
         when(sessionData.getCurrentBatch()).thenReturn(Optional.ofNullable(this.batchOutDto));
@@ -211,7 +209,7 @@ public class BatchEvaluatorServiceTest {
         // Prepare partly where possible correct responses
         Map<Long, Response> responses = new HashMap<>();
 
-        Response responseMCQ = new ResponseMCQ(1L, new HashSet<>(Arrays.asList(1L)));
+        Response responseMCQ = new ResponseMCQ(1L, Set.of(1L));
         responses.put(1L, responseMCQ);
 
         Response responseFBSQ = new ResponseFBSQ(2L, "PhraseDomain #4");
@@ -223,7 +221,7 @@ public class BatchEvaluatorServiceTest {
         ResponseFBMQ.Pair p3 = new ResponseFBMQ.Pair(3L, "PhraseDomain #4 for FBMQ answer #3");
         ResponseFBMQ.Pair p4 = new ResponseFBMQ.Pair(4L, "PhraseDomain #4 for FBMQ answer #4 Incorrect");
 
-        Response responseFBMQ = new ResponseFBMQ(3L, new HashSet(Arrays.asList(p1, p2, p3, p4)));
+        Response responseFBMQ = new ResponseFBMQ(3L, Set.of(p1, p2, p3, p4));
         responses.put(3L, responseFBMQ);
 
         // Partly
@@ -231,26 +229,25 @@ public class BatchEvaluatorServiceTest {
         ResponseMQ.Triple t2 = new ResponseMQ.Triple(2L, 24L, 23L);
         ResponseMQ.Triple t3 = new ResponseMQ.Triple(3L, 25L, 26L);
         ResponseMQ.Triple t4 = new ResponseMQ.Triple(4L, 28L, 27L);
-        Response responseMQ = new ResponseMQ(4L, new HashSet<>(Arrays.asList(t1, t2, t3, t4)));
+        Response responseMQ = new ResponseMQ(4L, Set.of(t1, t2, t3, t4));
         responses.put(4L, responseMQ);
 
-        Response responseSQ = new ResponseSQ(5L, Arrays.asList(1L, 2L, 3L, 4L, 5L));
+        Response responseSQ = new ResponseSQ(5L, List.of(1L, 2L, 3L, 4L, 5L));
         responses.put(5L, responseSQ);
 
         BatchInDto batchInDto = new BatchInDto(responses);
 
         // Actual test begins
         List<ResponseEvaluated> list = batchEvaluatorService.doEvaluate(batchInDto, sessionData);
-        assertEquals("Array length is not equal to 5",5, list.size());
-
-        assertEquals("First score is not 100.0",100.0, list.get(0).getScore(), 0.1);
-        assertEquals("Second score is not 100.0",100.0, list.get(1).getScore(), 0.1);
-        assertEquals("Third score is not 50.0",50.0, list.get(2).getScore(), 0.1);
-        assertEquals("Fourth score is not 50.0",50.0, list.get(3).getScore(), 0.1);
-        assertEquals("Fifth score is not 100.0",100.0, list.get(4).getScore(), 0.1);
+        assertEquals(5, list.size(), "Array length is not equal to 5");
+        assertEquals(100.0, list.get(0).getScore(), 0.1, "First score is not 100.0");
+        assertEquals(100.0, list.get(1).getScore(), 0.1, "Second score is not 100.0");
+        assertEquals(50.0, list.get(2).getScore(), 0.1, "Third score is not 50.0");
+        assertEquals(50.0, list.get(3).getScore(), 0.1, "Fourth score is not 50.0");
+        assertEquals(100.0, list.get(4).getScore(), 0.1, "Fifth score is not 100.0");
     }
 
-    @Test(timeout = 1000L)
+    @Test
     public void doEvaluateEmptyTest() {
         when(sessionData.getCurrentBatch()).thenReturn(Optional.ofNullable(this.batchOutDto));
         when(sessionData.getQuestionsMap()).thenReturn(this.questionsMap);
@@ -261,28 +258,33 @@ public class BatchEvaluatorServiceTest {
 
         // Actual test begins
         List<ResponseEvaluated> list = batchEvaluatorService.doEvaluate(batchInDto, sessionData);
-        assertEquals("Array length is not equal to 5",5, list.size());
-
-        assertEquals("First score is not 0.0",0.0, list.get(0).getScore(), 0.1);
-        assertEquals("Second score is not 0.0",0.0, list.get(1).getScore(), 0.1);
-        assertEquals("Third score is not 0.0",0.0, list.get(2).getScore(), 0.1);
-        assertEquals("Fourth score is not 0.0",0.0, list.get(3).getScore(), 0.1);
-        assertEquals("Fifth score is not 0.0",0.0, list.get(4).getScore(), 0.1);
+        assertEquals(5, list.size(), "Array length is not equal to 5");
+        assertEquals(0.0, list.get(0).getScore(), 0.1, "First score is not 0.0");
+        assertEquals(0.0, list.get(1).getScore(), 0.1, "Second score is not 0.0");
+        assertEquals(0.0, list.get(2).getScore(), 0.1, "Third score is not 0.0");
+        assertEquals(0.0, list.get(3).getScore(), 0.1, "Fourth score is not 0.0");
+        assertEquals(0.0, list.get(4).getScore(), 0.1, "Fifth score is not 0.0");
     }
 
-    @Test(timeout = 1000L, expected = NullPointerException.class)
+
+    @Test
+    @SuppressWarnings("DataFlowIssue")
     public void doEvaluateNullableInputTest() {
         // Actual test begins
-        batchEvaluatorService.doEvaluate(null, sessionData);
+        assertThrows(NullPointerException.class, () -> {
+            batchEvaluatorService.doEvaluate(null, sessionData);
+        });
     }
 
-    @Test(timeout = 1000L, expected = IllegalArgumentException.class)
+    @Test
     public void doEvaluateNullableCurrentBatchTest() {
-        sessionData.setCurrentBatch(null);
-        Map<Long, Response> responses = new HashMap<>();
-        BatchInDto batchInDto = new BatchInDto(responses);
-        // Actual test begins
-        batchEvaluatorService.doEvaluate(batchInDto, sessionData);
+        assertThrows(IllegalArgumentException.class, () -> {
+            sessionData.setCurrentBatch(null);
+            Map<Long, Response> responses = new HashMap<>();
+            BatchInDto batchInDto = new BatchInDto(responses);
+            // Actual test begins
+            batchEvaluatorService.doEvaluate(batchInDto, sessionData);
+        });
     }
 
 }
