@@ -1,16 +1,16 @@
 package ua.edu.ratos.service.transformer.mapper;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import ua.edu.ratos.dao.entity.Scheme;
 import ua.edu.ratos.dao.entity.SchemeTheme;
 import ua.edu.ratos.dao.entity.SchemeThemeSettings;
 import ua.edu.ratos.service.dto.out.SchemeInfoOutDto;
 
-import java.util.Arrays;
-import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
 
 import static org.hamcrest.CoreMatchers.is;
-import static org.junit.Assert.assertThat;
+import static org.hamcrest.MatcherAssert.assertThat;
 
 public class SchemeInfoMapperTest {
 
@@ -28,19 +28,19 @@ public class SchemeInfoMapperTest {
 
         SchemeTheme st1 = new SchemeTheme();
         SchemeThemeSettings sts1 = new SchemeThemeSettings();
-        sts1.setLevel1((short)15);
-        sts1.setLevel2((short)10);
-        sts1.setLevel3((short)5);
-        st1.setSettings(new HashSet(Arrays.asList(sts1)));
+        sts1.setLevel1((short) 15);
+        sts1.setLevel2((short) 10);
+        sts1.setLevel3((short) 5);
+        st1.setSettings(Set.of(sts1));
 
         SchemeTheme st2 = new SchemeTheme();
         SchemeThemeSettings sts2 = new SchemeThemeSettings();
-        sts2.setLevel1((short)10);
-        sts2.setLevel2((short)5);
-        sts2.setLevel3((short)0);
-        st2.setSettings(new HashSet(Arrays.asList(sts2)));
+        sts2.setLevel1((short) 10);
+        sts2.setLevel2((short) 5);
+        sts2.setLevel3((short) 0);
+        st2.setSettings(Set.of(sts2));
 
-        int actualResult = mockImpl.getQuestionsCount(Arrays.asList(st1, st2));
+        int actualResult = mockImpl.getQuestionsCount(List.of(st1, st2));
         assertThat("Result of sum is not as expected", actualResult, is(45));
     }
 }
